# SoareAlexGameServer.WebAPI/bin/Release/net7.0/swagger.json
@@ -1,26 +1,31 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Your API Name",
+    "title": "TEST",
     "description": "Your API Description",
     "version": "v1"
   },
   "paths": {
-    "/AddPlayer": {
+    "/api/Gifts/SendGift": {
       "post": {
         "tags": [
-          "Calculator"
+          "Gifts"
         ],
         "parameters": [
           {
             "in": "query",
-            "name": "PlayerId",
+            "name": "FriendPlayerId",
             "type": "string"
           },
           {
             "in": "query",
-            "name": "Name",
-            "type": "string"
+            "name": "ResourceType"
+          },
+          {
+            "in": "query",
+            "name": "ResourceValue",
+            "type": "number",
+            "format": "double"
           }
         ],
         "responses": {
@@ -30,123 +35,84 @@
         }
       }
     },
-    "/GetPlayer": {
+    "/api/Resources/UpdateResource": {
+      "post": {
+        "tags": [
+          "Resources"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "ResourceType"
+          },
+          {
+            "in": "query",
+            "name": "ResourceValue",
+            "type": "number",
+            "format": "double"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/Resources/GetResource": {
       "get": {
         "tags": [
-          "Calculator"
+          "Resources"
         ],
         "parameters": [
           {
             "in": "query",
-            "name": "PlayerId",
+            "name": "ResourceType"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/UserAuthentification/Login": {
+      "post": {
+        "tags": [
+          "UserAuthentification"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "DeviceId",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "Success"
-          }
-        }
-      }
-    },
-    "/GetSum1": {
-      "post": {
-        "tags": [
-          "Calculator"
-        ],
-        "parameters": [
-          {
-            "in": "query",
-            "name": "Value1",
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "in": "query",
-            "name": "Value2",
-            "type": "integer",
-            "format": "int32"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/GetSum2": {
-      "post": {
-        "tags": [
-          "Calculator"
-        ],
-        "parameters": [
-          {
-            "in": "query",
-            "name": "Value1",
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "in": "query",
-            "name": "Value2",
-            "type": "integer",
-            "format": "int32"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/WeatherForecast": {
-      "get": {
-        "tags": [
-          "WeatherForecast"
-        ],
-        "operationId": "GetWeatherForecast",
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/WeatherForecast"
-              }
-            }
           }
         }
       }
     }
   },
   "definitions": {
-    "WeatherForecast": {
-      "type": "object",
-      "properties": {
-        "date": {
-          "format": "date-time",
-          "type": "string"
-        },
-        "temperatureC": {
-          "format": "int32",
-          "type": "integer"
-        },
-        "temperatureF": {
-          "format": "int32",
-          "type": "integer",
-          "readOnly": true
-        },
-        "summary": {
-          "type": "string"
-        }
-      }
+    "ResourceType": {
+      "format": "int32",
+      "enum": [
+        0,
+        1
+      ],
+      "type": "integer"
     }
-  }
+  },
+  "securityDefinitions": {
+    "Bearer": { }
+  },
+  "security": [
+    {
+      "Bearer": [ ]
+    }
+  ]
 }
